objects/CEC__c.object
<CustomObject>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>AENameLookup__r.MobilePhone</formula>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Agents__c</fullName>
        <formula>TEXT(Opportunity__r.NumberofAgents__c)</formula>
        <label>Number of Agents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <formula>Opportunity__r.Account.NumberOfSites__c</formula>
        <label>Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_of_Demo__c</fullName>
        <label>Objective of the Demo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objectiveofthevisit__c</fullName>
        <label>Objective of the visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.Full_Name__c</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CX Center Visits</relationshipLabel>
        <relationshipName>CEC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Perception_of_the_competition__c</fullName>
        <inlineHelpText>What is the customer&apos;s perception of the competition?</inlineHelpText>
        <label>Competitive Strategy and Positioning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Jr - Manager of IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Adam - VP IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Bettina - Chief Digital Officer/eCommerce</fullName>
                </value>
                <value>
                    <fullName>Bettina Jr - Digital Channel Manager</fullName>
                </value>
                <value>
                    <fullName>Bob - Contact Center Operations Director/Manager</fullName>
                </value>
                <value>
                    <fullName>Carl - Call Center Manager/Director</fullName>
                </value>
                <value>
                    <fullName>Charles - CEO</fullName>
                </value>
                <value>
                    <fullName>Chuck - Program Manager</fullName>
                </value>
                <value>
                    <fullName>Dean Jr - Customer Service Manager</fullName>
                </value>
                <value>
                    <fullName>Dean - VP Customer Service</fullName>
                </value>
                <value>
                    <fullName>Declan - External Influencer</fullName>
                </value>
                <value>
                    <fullName>Edith Jr - Customer Experience Director/Manager</fullName>
                </value>
                <value>
                    <fullName>Edith - VP Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Eric - CIO/CTO</fullName>
                </value>
                <value>
                    <fullName>Eric Jr - IT Director</fullName>
                </value>
                <value>
                    <fullName>Frank - CFO</fullName>
                </value>
                <value>
                    <fullName>Frank Jr - Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Jason - IVR Manager</fullName>
                </value>
                <value>
                    <fullName>John - COO/LOB</fullName>
                </value>
                <value>
                    <fullName>Joyce - VP/Director/Manager of Collections</fullName>
                </value>
                <value>
                    <fullName>Laura - Procurement Officer</fullName>
                </value>
                <value>
                    <fullName>Marty - CMO</fullName>
                </value>
                <value>
                    <fullName>Marty Jr - Marketing Director/Manager</fullName>
                </value>
                <value>
                    <fullName>Nancie - Non Persona</fullName>
                </value>
                <value>
                    <fullName>Nancy - Chief Enterprise Architect</fullName>
                </value>
                <value>
                    <fullName>Paul - IT Analyst/Manager</fullName>
                </value>
                <value>
                    <fullName>Robert - Chief Information Security Officer</fullName>
                </value>
                <value>
                    <fullName>Sam - VP Risk Management</fullName>
                </value>
                <value>
                    <fullName>Sanjay - CSO/VP/Director of Sales</fullName>
                </value>
                <value>
                    <fullName>Sanjay Jr - Manager of Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio_Offer__c</fullName>
        <label>Portfolio Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect (Cloud/Prem)</fullName>
                </value>
                <value>
                    <fullName>PureEngage (Cloud/Prem)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Location__c</fullName>
        <label>Contact Center Primary Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <formula>AENameLookup__r.Phone</formula>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_function_of_their_contact_center__c</fullName>
        <label>Primary function of their contact center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Debt Collection</fullName>
                </value>
                <value>
                    <fullName>Internal Help Desk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>TEXT(Opportunity__r.ForecastStatus__c )</formula>
        <label>Probability of closing this deal (%)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospective_Clients__c</fullName>
        <description>What are the quantitative client success metrics?
Prospective Clients</description>
        <inlineHelpText>Prospective Clients</inlineHelpText>
        <label>Quantitative prospective clients metric</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantitative_client_success_metrics__c</fullName>
        <label>Quantitative client success metrics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% lift in pre/post visit survey</fullName>
                </value>
                <value>
                    <fullName>% revenue lift post visit</fullName>
                </value>
                <value>
                    <fullName>% lift in adopted solutions</fullName>
                </value>
                <value>
                    <fullName>Enrollment in GCAP</fullName>
                </value>
                <value>
                    <fullName># of advocacy channels adopted by client</fullName>
                </value>
                <value>
                    <fullName>Net Promoter Score</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantitative_prospective_metric_other__c</fullName>
        <label>Quantitative prospective metric other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_Genesys_is_the_right_solution__c</fullName>
        <description>What are the reasons to believe that Genesys is the right solution?</description>
        <inlineHelpText>What are the reasons to believe that Genesys is the right solution?</inlineHelpText>
        <label>Reasons Genesys is the right solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_at_Close__c</fullName>
        <formula>Opportunity__r.Revenue_to_Be_Recognized_1__c</formula>
        <label>Revenue at Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CX_Center</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specific_Areas_of_Interest__c</fullName>
        <inlineHelpText>What  specific areas of interest would you like to address in the meeting?</inlineHelpText>
        <label>Specific Areas of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Presentation</fullName>
                </value>
                <value>
                    <fullName>CX Routing Optimization</fullName>
                </value>
                <value>
                    <fullName>Digital Engagement Center</fullName>
                </value>
                <value>
                    <fullName>Enterprise Workload Management</fullName>
                </value>
                <value>
                    <fullName>Inbound Engagement Center</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics</fullName>
                </value>
                <value>
                    <fullName>Multimedia Communications Manager</fullName>
                </value>
                <value>
                    <fullName>Notification Center</fullName>
                </value>
                <value>
                    <fullName>Outbound Engagement Center</fullName>
                </value>
                <value>
                    <fullName>Self-Service IVR</fullName>
                </value>
                <value>
                    <fullName>Workforce Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Visit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_Close__c</fullName>
        <formula>Opportunity__r.How_Long_Opportunity_Took_To_Close__c</formula>
        <label>Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact_Name__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Attendees__c</fullName>
        <label>Total Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Visitor__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Type)</formula>
        <label>Type of Visitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_about_this_would_our_clients_share__c</fullName>
        <description>What about this do we anticipate our client would share?</description>
        <inlineHelpText>Remarkable things Genesys is doing.</inlineHelpText>
        <label>What about this will our clients share</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Win_Themes__c</fullName>
        <inlineHelpText>For example, how Genesys Digital Solutions will enable the customer to be one of the top 5 Customer Experience leaders in the world.</inlineHelpText>
        <label>Win Themes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>buyer_personas__c</fullName>
        <description>Who are we trying to influence? Is this an existing client or a prospective client?</description>
        <inlineHelpText>Who are we trying to influence? Is this an existing client or a prospective client? Include links to LinkedIn profiles, etc</inlineHelpText>
        <label>Buyer Personas old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>planned_outcomes_desired_result__c</fullName>
        <description>What are the future planned outcomes and what is the desired end result</description>
        <inlineHelpText>What are the future planned outcomes and what is the desired end result</inlineHelpText>
        <label>Planned outcomes &amp; desired result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CX Center Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CXC{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CX Center Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>